--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.2.0",
+    "postcss-import": "^9.0.0",
     "postcss-simple-vars": "^3.0.0"
   }
 }
