--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/IKAcc/Gorbeh#readme",
   "dependencies": {
+    "autoprefixer": "^6.6.0",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.2.0",
     "postcss-import": "^9.0.0",
