--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
   "homepage": "https://github.com/IKAcc/Gorbeh#readme",
   "dependencies": {
     "autoprefixer": "^6.6.0",
+    "cssnano": "^3.9.1",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.2.0",
     "postcss-import": "^9.0.0",
     "postcss-simple-vars": "^3.0.0"
-  },
-  "devDependencies": {
-    "cssnano": "^3.9.1"
   }
 }
