--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.2.0",
     "postcss-import": "^9.0.0",
+    "postcss-nested": "^1.0.0",
     "postcss-simple-vars": "^3.0.0"
   }
 }
